package handler

import (
	"context"
	pb "thaily/proto/academic"
)


func (h *Handler) CreateFaculty(ctx context.Context, req *pb.CreateFacultyRequest) (*pb.CreateFacultyResponse, error) {
	// TODO: Implement CreateFaculty
	return &pb.CreateFacultyResponse{}, nil
}

func (h *Handler) GetFaculty(ctx context.Context, req *pb.GetFacultyRequest) (*pb.GetFacultyResponse, error) {
	// TODO: Implement GetFaculty
	return &pb.GetFacultyResponse{}, nil
}

func (h *Handler) UpdateFaculty(ctx context.Context, req *pb.UpdateFacultyRequest) (*pb.UpdateFacultyResponse, error) {
	// TODO: Implement UpdateFaculty
	return &pb.UpdateFacultyResponse{}, nil
}

func (h *Handler) DeleteFaculty(ctx context.Context, req *pb.DeleteFacultyRequest) (*pb.DeleteFacultyResponse, error) {
	// TODO: Implement DeleteFaculty
	return &pb.DeleteFacultyResponse{}, nil
}

func (h *Handler) ListFaculties(ctx context.Context, req *pb.ListFacultiesRequest) (*pb.ListFacultiesResponse, error) {
	// TODO: Implement ListFaculties
	return &pb.ListFacultiesResponse{}, nil
}

