package handler

import (
	"context"
	pb "thaily/proto/academic"
)


func (h *Handler) CreateMajor(ctx context.Context, req *pb.CreateMajorRequest) (*pb.CreateMajorResponse, error) {
	// TODO: Implement CreateMajor
	return &pb.CreateMajorResponse{}, nil
}

func (h *Handler) GetMajor(ctx context.Context, req *pb.GetMajorRequest) (*pb.GetMajorResponse, error) {
	// TODO: Implement GetMajor
	return &pb.GetMajorResponse{}, nil
}

func (h *Handler) UpdateMajor(ctx context.Context, req *pb.UpdateMajorRequest) (*pb.UpdateMajorResponse, error) {
	// TODO: Implement UpdateMajor
	return &pb.UpdateMajorResponse{}, nil
}

func (h *Handler) DeleteMajor(ctx context.Context, req *pb.DeleteMajorRequest) (*pb.DeleteMajorResponse, error) {
	// TODO: Implement DeleteMajor
	return &pb.DeleteMajorResponse{}, nil
}

func (h *Handler) ListMajors(ctx context.Context, req *pb.ListMajorsRequest) (*pb.ListMajorsResponse, error) {
	// TODO: Implement ListMajors
	return &pb.ListMajorsResponse{}, nil
}

