package handler

import (
	"context"
	pb "thaily/proto/academic"
)


func (h *Handler) CreateSemester(ctx context.Context, req *pb.CreateSemesterRequest) (*pb.CreateSemesterResponse, error) {
	// TODO: Implement CreateSemester
	return &pb.CreateSemesterResponse{}, nil
}

func (h *Handler) GetSemester(ctx context.Context, req *pb.GetSemesterRequest) (*pb.GetSemesterResponse, error) {
	// TODO: Implement GetSemester
	return &pb.GetSemesterResponse{}, nil
}

func (h *Handler) UpdateSemester(ctx context.Context, req *pb.UpdateSemesterRequest) (*pb.UpdateSemesterResponse, error) {
	// TODO: Implement UpdateSemester
	return &pb.UpdateSemesterResponse{}, nil
}

func (h *Handler) DeleteSemester(ctx context.Context, req *pb.DeleteSemesterRequest) (*pb.DeleteSemesterResponse, error) {
	// TODO: Implement DeleteSemester
	return &pb.DeleteSemesterResponse{}, nil
}

func (h *Handler) ListSemesters(ctx context.Context, req *pb.ListSemestersRequest) (*pb.ListSemestersResponse, error) {
	// TODO: Implement ListSemesters
	return &pb.ListSemestersResponse{}, nil
}

